tests/fail/toplam-hali.kip
(1 2 toplamını) yaz.
